--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html>
+<title>Mr.Choy Portfolio</title>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+
+<h1>this's my portfolio.</h1>
+
+<p>this's my portfolio.</p>
+
 </body>
 </html>
